--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -1,10 +1,10 @@
-name: Compilar e implementar la aplicación de .NET Core en la aplicación de funciones appfunction2000jh
+name: Compilar e implementar la aplicación de .NET Core
 on:
   push:
     branches:
     - master
 env:
-  AZURE_FUNCTIONAPP_NAME: appfunction2000jh
+  AZURE_FUNCTIONAPP_NAME: 'CourseFunctionJH'
   AZURE_FUNCTIONAPP_PACKAGE_PATH: CourseDBFunction\published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 3.1.x
