--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -33,5 +33,5 @@ jobs:
       uses: Azure/functions-action@v1.3.1
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        publish-profile: ${{ secrets.APPFUNCTION2000JH_FFFF }}
+        publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_KEY }}
         package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
